	PR c++/17542 	* cp-tree.h (class_key_or_enum_as_string): Declare. 	* error.c (class_key_or_enum): Rename to class_key_or_enum_as_string 	and remove static qualifier. 	* decl.c (shadow_tag): Warn about ignored attributes in class/struct/ 	union/enum declaration. 	* g++.dg/ext/attrib18.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@89898 138bc75d-0d04-0410-961f-82ee72b054a4