gcc/cp/cp-tree.h
@@ -3823,6 +3823,7 @@ extern const char *expr_as_string		(tree, int);
 extern const char *context_as_string            (tree, int);
 extern const char *lang_decl_name		(tree, int);
 extern const char *language_to_string           (enum languages);
+extern const char *class_key_or_enum_as_string  (tree);
 extern void print_instantiation_context         (void);
 
 /* in except.c */
